Agregando div para que el link de contacto vaya hacia allá.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="index-desktop.css" media="screen and (min-width: 1024px)" type="text/css" rel="stylesheet" />
 </head>
 <body>
-    <my-header img="./imgs/logo.png" name1="PROYECTOS" name2="SOBRE MÍ" name3="CURRÍCULUM" name4="CONTACTO" linkhome="https://manuelmad.github.io/index.html" link1="https://manuelmad.github.io/proyectos/proyectos.html" link2="https://manuelmad.github.io/index.html#personal-info" link3="https://manuelmad.github.io/index.html#curriculum" link4="#contacto"></my-header>
+    <my-header img="./imgs/logo.png" name1="PROYECTOS" name2="SOBRE MÍ" name3="CURRÍCULUM" name4="CONTACTO" linkhome="https://manuelmad.github.io/index.html" link1="https://manuelmad.github.io/proyectos/proyectos.html" link2="https://manuelmad.github.io/index.html#personal-info" link3="https://manuelmad.github.io/index.html#curriculum" link4="#false_contacto"></my-header>
     <main>
         <section class="title">
             <h1>ENCUESTA EL CLIENTE</h1>
@@ -82,7 +82,7 @@
             </article>
         </section>
     </main>
-
+    <div id="false_contacto"></div>
     <my-footer textbutton="MIS PROYECTOS" linkbutton="https://manuelmad.github.io/proyectos/proyectos.html"></my-footer>
     <script type="module" src="./components/my-header.js"></script>
     <script type="module" src="./components/my-footer.js"></script>
